# phisingDetection

./: .gitignore  Readme.md  app.py  architecture.md  config.py  extension.md  models.py  phishguard.db  plan.md  requirements.txt  test_api.py  test_gemini.py
emailphising02/phishing_detection_project/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
emailphising02/phishing_detection_project/artifacts/nb/: meta.json
emailphising02/phishing_detection_project/dataset/safe_samples/: Enjoy ad-free music listening with Spotify Premium.eml  Get started with Google Antigravity.eml  M Ashwin, there’s money waiting in your wallet! 💰.eml  OTP for Email Verification on RailOne.eml  Your Google Account was recovered successfully.eml
emailphising02/phishing_detection_project/deployment/: api.py
emailphising02/phishing_detection_project/ensemble/: __init__.py  hybrid_model.py
emailphising02/phishing_detection_project/evaluation/: evaluate_model.py  metrics.py
emailphising02/phishing_detection_project/inference/: __init__.py  eml_parser.py  predict_email.py
emailphising02/phishing_detection_project/model/: __init__.py  naive_bayes_model.py  roberta_model.py
emailphising02/phishing_detection_project/preprocessing/: build_eml_dataset.py  preprocess.py
emailphising02/phishing_detection_project/tests/: test_eml_parser.py  test_ensemble.py  test_metrics.py  test_naive_bayes.py  test_preprocessing.py
emailphising02/phishing_detection_project/training/: train_model.py  train_naive_bayes.py  train_roberta.py
(+39 files in other folders)
